# TrivialPursuitGame

./: .gitignore  CMakeLists.txt
resources/: high_scores.csv
src/: main.cpp
src/core/: GameFunctions.cpp  GameFunctions.h  GameSetup.cpp  GameSetup.h  HighScoreManager.cpp  HighScoreManager.h
src/file_handling/: Delete.cpp  Delete.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h
src/gui/: AdminDialog.cpp  AdminDialog.h  GameDialog.cpp  GameDialog.h  MainDialog.cpp  MainDialog.h
test/core_tests/: GameFunctionsTests.cpp
test/file_handling_tests/: DeleteTests.cpp  FileReaderTests.cpp  FileWriterTests.cpp
